// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-ApiUsageInstruction correctly 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-7 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-5"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://fellesdatakatalog.brreg.no/api-cat/apis"
    col1Width={7}
    col2="The production API server"
    col2Width={5}
    key="https://fellesdatakatalog.brreg.no/api-cat/apisThe production API server"
  />
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-12 pl-0"
    >
      <a
        className="mr-5"
        href="https://informasjonsforvaltning.github.io/felles-datakatalog/api-katalog/api/"
      >
        Documentation
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
      <a
        className="mr-5"
        href="https://raw.githubusercontent.com/brreg/openAPI/master/specs/api-cat.json"
      >
        Specification
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </div>
  </div>
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly apiSpecUrl and apiDocUrl are not set 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-7 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-5"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://fellesdatakatalog.brreg.no/api-cat/apis"
    col1Width={7}
    col2="The production API server"
    col2Width={5}
    key="https://fellesdatakatalog.brreg.no/api-cat/apisThe production API server"
  />
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly apiSpecUrl is not set 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-7 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-5"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://fellesdatakatalog.brreg.no/api-cat/apis"
    col1Width={7}
    col2="The production API server"
    col2Width={5}
    key="https://fellesdatakatalog.brreg.no/api-cat/apisThe production API server"
  />
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-12 pl-0"
    >
      <a
        className="mr-5"
        href="https://informasjonsforvaltning.github.io/felles-datakatalog/api-katalog/api/"
      >
        Documentation
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </div>
  </div>
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly apiSpecUrl is not set 2`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-7 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-5"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://fellesdatakatalog.brreg.no/api-cat/apis"
    col1Width={7}
    col2="The production API server"
    col2Width={5}
    key="https://fellesdatakatalog.brreg.no/api-cat/apisThe production API server"
  />
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-12 pl-0"
    >
      <a
        className="mr-5"
        href="https://raw.githubusercontent.com/brreg/openAPI/master/specs/api-cat.json"
      >
        Specification
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </div>
  </div>
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly with no props 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-7 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-5"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
</ListRegular>
`;
